[gd_scene load_steps=31 format=2]

[ext_resource path="res://World/cor_mais_escura_com_sombra.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/MainMenu.tres" type="DynamicFont" id=3]
[ext_resource path="res://World/Tutorial.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/Menu Music.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/sprite_montanha_krita.png" type="Texture" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=19]
0/name = "cor_mais_escura_com_sombra.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 5, 2 ), 507, Vector2( 6, 2 ), 510 ]
0/autotile/icon_coordinate = Vector2( 3, 3 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFontData" id=20]
font_path = "res://Menus/Fonte/ARIALBD.TTF"

[sub_resource type="DynamicFont" id=21]
size = 6
use_filter = true
font_data = SubResource( 20 )

[sub_resource type="DynamicFontData" id=22]
font_path = "res://Menus/Fonte/ARIALBD.TTF"

[sub_resource type="DynamicFont" id=23]
size = 12
use_filter = true
font_data = SubResource( 22 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 168, 80 )
scale = Vector2( 0.366667, 0.22 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 19 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65533, 0, 0, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 2, 131069, 0, 65536, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65537, 65555, 0, 65537, 65556, 0, 65537, 65557, 0, 65537, 65558, 0, 65537, 65559, 0, 65538, 196605, 0, 65536, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 196611, 131073, 0, 131073, 131074, 0, 131073, 131075, 0, 131073, 131076, 0, 131073, 131077, 0, 131073, 131078, 0, 131073, 131079, 0, 131073, 131080, 0, 131073, 131081, 0, 131073, 131082, 0, 131073, 131083, 0, 131073, 131084, 0, 131073, 131085, 0, 131073, 131086, 0, 131073, 131087, 0, 131073, 131088, 0, 131073, 131089, 0, 131073, 131090, 0, 131073, 131091, 0, 196611, 131092, 0, 65537, 131093, 0, 65537, 131094, 0, 65537, 131095, 0, 65538, 262141, 0, 65536, 262142, 0, 65537, 262143, 0, 65537, 196608, 0, 65538, 196627, 0, 65536, 196628, 0, 65537, 196629, 0, 65537, 196630, 0, 65537, 196631, 0, 65538, 327677, 0, 65536, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65538, 262163, 0, 65536, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65538, 393213, 0, 65536, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65538, 327699, 0, 65536, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65538, 458749, 0, 65536, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65538, 393235, 0, 65536, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65538, 524285, 0, 65536, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65538, 458771, 0, 65536, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65538, 589821, 0, 65536, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65538, 524307, 0, 65536, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65538, 655357, 0, 65536, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65538, 589843, 0, 65536, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65538, 720893, 0, 65536, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65538, 655379, 0, 65536, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65538, 786429, 0, 65536, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 131077, 720897, 0, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 1, 720902, 0, 1, 720903, 0, 1, 720904, 0, 1, 720905, 0, 1, 720906, 0, 1, 720907, 0, 1, 720908, 0, 1, 720909, 0, 1, 720910, 0, 1, 720911, 0, 1, 720912, 0, 1, 720913, 0, 1, 720914, 0, 1, 720915, 0, 131078, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65538, 851965, 0, 65536, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65538, 917501, 0, 65536, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65537, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65538, 983037, 0, 65536, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65537, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65538, 1048573, 0, 131072, 1048574, 0, 131073, 1048575, 0, 131073, 983040, 0, 131073, 983041, 0, 131073, 983042, 0, 131073, 983043, 0, 131073, 983044, 0, 131073, 983045, 0, 131073, 983046, 0, 131073, 983047, 0, 131073, 983048, 0, 131073, 983049, 0, 131073, 983050, 0, 131073, 983051, 0, 131073, 983052, 0, 131073, 983053, 0, 131073, 983054, 0, 131073, 983055, 0, 131073, 983056, 0, 131073, 983057, 0, 131073, 983058, 0, 131073, 983059, 0, 131073, 983060, 0, 131073, 983061, 0, 131073, 983062, 0, 131073, 983063, 0, 131074 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 36.0407, 156.176 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 36.0407, 156.176 )
current = true
limit_left = 0
limit_top = 64
limit_right = 320
limit_bottom = 250
limit_smoothed = true

[node name="Parte 1" type="Control" parent="."]
margin_left = 36.0407
margin_top = 156.176
margin_right = 76.0407
margin_bottom = 196.176
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Parte 1"]
margin_left = -19.0407
margin_top = 27.8237
margin_right = 267.959
margin_bottom = 82.8237
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Parte 1"]
margin_left = 83.9593
margin_top = 27.8237
margin_right = 160.959
margin_bottom = 47.8237
custom_fonts/font = ExtResource( 3 )
text = "Controles:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Parte 1"]
margin_left = -12.0407
margin_top = 51.8237
margin_right = 96.9593
margin_bottom = 65.8237
custom_fonts/font = SubResource( 21 )
text = "W/A/D - Movimentação"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Parte 1"]
margin_left = 99.9593
margin_top = 51.8237
margin_right = 139.959
margin_bottom = 65.8237
custom_fonts/font = SubResource( 21 )
text = "Shift - Dash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Parte 1"]
margin_left = -12.0407
margin_top = 67.8237
margin_right = 148.959
margin_bottom = 81.8237
custom_fonts/font = SubResource( 21 )
text = "Espaço/Botão Esquerdo - Ataque"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Parte 1"]
anchor_right = 0.099
margin_left = 188.0
margin_top = 52.0
margin_right = 240.04
margin_bottom = 72.0
custom_fonts/font = SubResource( 23 )
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parte 2" type="Control" parent="."]
visible = false
margin_left = 36.0407
margin_top = 156.176
margin_right = 76.0407
margin_bottom = 196.176
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Parte 2"]
margin_left = -19.0407
margin_top = 27.8237
margin_right = 267.959
margin_bottom = 82.8237
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Parte 2"]
margin_left = 83.9593
margin_top = 27.8237
margin_right = 160.959
margin_bottom = 47.8237
custom_fonts/font = ExtResource( 3 )
text = "Controles:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Parte 2"]
margin_left = -17.0
margin_top = 52.0
margin_right = 217.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 21 )
text = "Acima do personagem está a barra de energia.Com metade, você pode dar o \"Dash\", com ela cheia, você pode dar um pulo duplo no ar. "
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Parte 2"]
anchor_right = 0.099
margin_left = 197.385
margin_top = 30.8637
margin_right = 261.425
margin_bottom = 50.8637
custom_fonts/font = SubResource( 23 )
text = "Continuar"

[node name="Parte 3" type="Control" parent="."]
visible = false
margin_left = 36.0407
margin_top = 156.176
margin_right = 76.0407
margin_bottom = 196.176
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Parte 3"]
margin_left = -19.0407
margin_top = 27.8237
margin_right = 267.959
margin_bottom = 82.8237
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Parte 3"]
margin_left = 83.9593
margin_top = 27.8237
margin_right = 160.959
margin_bottom = 47.8237
custom_fonts/font = ExtResource( 3 )
text = "Controles:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Parte 3"]
margin_left = -12.0
margin_top = 52.0
margin_right = 148.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 21 )
text = "Acima do personagem e de todos os inimigos, existe um número mostrando a vida atual"
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Parte 3"]
anchor_right = 0.099
margin_left = 195.959
margin_top = 51.8237
margin_right = 259.999
margin_bottom = 71.8237
custom_fonts/font = SubResource( 23 )
text = "Continuar"

[node name="Parte 5" type="Control" parent="."]
visible = false
margin_left = 36.0407
margin_top = 156.176
margin_right = 76.0407
margin_bottom = 196.176
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Parte 5"]
margin_left = -19.0407
margin_top = 27.8237
margin_right = 267.959
margin_bottom = 82.8237
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Parte 5"]
margin_left = 83.6944
margin_top = 25.1753
margin_right = 160.694
margin_bottom = 45.1753
custom_fonts/font = ExtResource( 3 )
text = "Controles:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Parte 5"]
margin_left = -12.0407
margin_top = 43.824
margin_right = 187.959
margin_bottom = 82.824
custom_fonts/font = SubResource( 21 )
text = "Mais futuramente, você irá na cantina, e usará esses itens:"
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Parte 5"]
margin_left = -12.0407
margin_top = 59.824
margin_right = 187.959
margin_bottom = 98.824
custom_fonts/font = SubResource( 21 )
text = "Coxinha - C
Coquinha - Q"
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Parte 5"]
margin_left = 51.9593
margin_top = 59.824
margin_right = 251.959
margin_bottom = 98.824
custom_fonts/font = SubResource( 21 )
text = "Almoço - T"
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Parte 5"]
anchor_right = 0.099
margin_left = 195.959
margin_top = 51.8237
margin_right = 259.999
margin_bottom = 71.8237
custom_fonts/font = SubResource( 23 )
text = "Continuar"

[node name="Parte 4" type="Control" parent="."]
visible = false
margin_left = 36.0407
margin_top = 156.176
margin_right = 76.0407
margin_bottom = 196.176
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Parte 4"]
margin_left = -19.0407
margin_top = 27.8237
margin_right = 267.959
margin_bottom = 82.8237
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Parte 4"]
margin_left = -36.0407
margin_top = 27.8237
margin_right = 284.959
margin_bottom = 47.8237
custom_fonts/font = ExtResource( 3 )
text = "Vamos lá, tente matar seu primeiro inimigo!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Parte 4"]
margin_left = -12.0407
margin_top = 51.8237
margin_right = 179.959
margin_bottom = 82.8237
custom_fonts/font = SubResource( 21 )
text = "Quando estiver pronto para enfrentar o grande vilão Corominati e seus capangas coroninhas, clique em \"Continuar\""
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Parte 4"]
anchor_right = 0.099
margin_left = 195.959
margin_top = 51.8237
margin_right = 259.999
margin_bottom = 71.8237
custom_fonts/font = SubResource( 23 )
text = "Continuar"

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 24, -8 )

[node name="Node2D" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer2" parent="Node2D" index="1"]
autoplay = true
[connection signal="pressed" from="Parte 1/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Parte 2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Parte 3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Parte 5/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Parte 4/Button4" to="." method="_on_Button4_pressed"]

[editable path="Player"]

[editable path="Node2D"]
